@@ -1,6 +1,9 @@
 Changes for Labyrinth-Plugin-Album
 ==================================
 
+        - When uploading an image for an album, there will be no delete
+          requests. As such, don't perform them and get SQL erros!
+
 1.08	2015-01-09
         - add lightbox links to the edit page template.
         - avoid browser caching of images on edit page by using a timesamp.
